cmake_minimum_required(VERSION 3.16)
project(person1)


message("LIBRARY_OUTPUT_DIRECTORY : " ${LIBRARY_OUTPUT_DIRECTORY})
message("LIBRARY_OUTPUT_PATH : " ${LIBRARY_OUTPUT_PATH})
message("PROJECT_SOURCE_DIR : " ${PROJECT_SOURCE_DIR})

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

add_executable(${PROJECT_NAME} person1.c)